# tinymind

./: Formula_detail.md  README.md  main.py  pyproject.toml
.mimocode/: .cron-lock
dataset/: lm_dataset.py
model/: model.py
trainer/: train_pretrain.py  trainer_utils.py
